css/modules.css
/*Adds an rgba background with opacity to every div element on the page
=============================================*/
.divs {
  border: solid black;
  /*margin: 30px 0px;*/
  background-color: rgba(200, 200, 200, 0.70);
}

/*header and nav-bar special borders, fixed nav bar
=============================================*/
.nav-bar {
  display: block;
  top: 0px;
  position: fixed;
  min-width: 85vw;
  height: 5vh;
  border: 2px dashed blue;
  margin-top: 0px;
  margin-bottom: 1px;
  background-color: rgba(013, 013, 013, 0.85);
  z-index: 2;
}
body .header {
  display: block;
  position: absolute;
  min-width: 85vw;
  height: 7.5vh;
  margin-top: 5.2vh;
  padding: 0;
  text-align: left;
  border: 2px dashed #FF0000;
  background-color: rgba(200, 200, 200, 0.70);
}
/*table of contents for the projects floated to the left of the slideshow
=============================================*/
.table-of-contents{
  float: left;
  text-align: left;
  margin-top: 0;
  min-width: 17.5vw;
  min-height: 100px;
  font-size: 0.85em;
}
.table-of-contents li{
  margin-left: 1.5em;
  text-align: left;
  list-style: lower-roman;
  font-size: 0.85em;
}
#slideshow-article {
  float: left;
  width: 85vw;
  margin-top: 12.5vh;
}

/* Clear footer and projects from floats slideshow
=============================================*/
.projects footer{
  clear: both;
}

/*Desktop/non-ghetto tablets Compatibility
=========================================================================================*/
@media screen and (max-width: 740px) {
  /*Adds an rgba background with opacity to every div element on the page
  =============================================*/
  .divs {
    border: solid black;
    margin: 30px 0px;
    background-color: rgba(200, 200, 200, 0.70);
  }
  /*header and nav-bar special borders, fixed nav bar
  =============================================*/
  .nav-bar {
    display: none;
  }
  .nav-burger{
    font-size: 1em;
    color: rgba(013,013,013, .85);
    float: right;
  }
  body .header {
    display: block;
    position: absolute;
    min-width: 85vw;
    height: 5vh;
    margin-top: 5.2vh;
    padding-left: 0;
    padding-right: 0;
    text-align: left;
    font-size: 1.7em;
    border: 2px dashed #FF0000;
    background-color: rgba(200, 200, 200, 0.70);
  }
  /*table of contents for the projects floated to the left of the slideshow
  =============================================*/
  .table-of-contents{
    display: block;
    text-align: center;
    margin-top: 0;
    min-width: 17.5vw;
    max-width: 17.5vw;
    font-size: 0.75em;
    /*overflow: hidden;*/
  }
  .table-of-contents li{
    margin-left: 1.15em;
    text-align: left;
    list-style: lower-roman;
    font-size: 0.6em;
  }
  .main-intro{
    float: left;
    margin-top: 0;
    margin-left: .5vw;
    margin-right: 0px;
    min-width: 65vw;
    max-width: 65vw;
  }
  #slideshow-article {
    display: block;
    width: 85vw;
    margin-top: 12.5vh;
  }
  #slideshow-article img{
    background: rgba(013,013,013, .85);
  }
  /* Clear footer and projects from floats slideshow
  =============================================*/
  .projects footer{
    clear: both;
  }
}

/*Desktop/non-ghetto tablets Compatibility
=========================================================================================*/
@media screen and (min-width: 740px) {
  /*Adds an rgba background with opacity to every div element on the page
  =============================================*/
  .divs {
    border: solid black;
    margin: 30px 0px;
    background-color: rgba(200, 200, 200, 0.70);
  }
  /*header and nav-bar special borders, fixed nav bar
  =============================================*/
  .nav-bar {
    display: block;
    top: 0px;
    position: fixed;
    min-width: 85vw;
    height: 5vh;
    border: 2px dashed blue;
    margin-top: 0px;
    margin-bottom: 1px;
    background-color: rgba(013, 013, 013, 0.85);
  }
  .nav-bar a{
    font-size: 2em;
    color: #EFE;
    text-overflow: clip;
    text-transform: lowercase;
    text-decoration-line: none;
  }
  .nav-burger{
    display: none;
  }
  body .header {
    display: block;
    position: absolute;
    min-width: 85vw;
    height: 7.5vh;
    margin-top: 5.2vh;
    padding: 0;
    text-align: left;
    border: 2px dashed #FF0000;
    background-color: rgba(200, 200, 200, 0.70);
  }
  /*table of contents for the projects floated to the left of the slideshow
  =============================================*/
  .table-of-contents{
    display: block;
    text-align: center;
    margin-top: 0;
    min-width: 17.5vw;
    max-width: 17.5vw;
    font-size: 0.85em;
  }
  .main-intro{
    float: left;
    margin-top: 0;
    margin-left: 1.5vw;
    margin-right: 0;
    min-width: 65.25vw;
    max-width: 65.25vw;
  }
  .main-intro-big{
    float: left;
    margin-top: 0;
    width: 85vw;
  }
  .table-of-contents li{
    margin-left: 1.5em;
    text-align: left;
    list-style: lower-roman;
    font-size: 0.85em;
  }
  #slideshow-article {
    display: block;
    width: 85vw;
    margin-top: 12.5vh;
  }
  #slideshow-article img{
    background: rgba(013,013,013, .85);
  }
  /* Clear footer and projects from floats slideshow
  =============================================*/
  .projects footer{
    clear: both;
  }
}

